solved issue of game continer not spanning the while width but now the 50% alignment is def not 50%

--- a/src/components/game/game.css
+++ b/src/components/game/game.css
@@ -23,46 +23,46 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  background-color: yellow;
+  /* justify-content: space-around; */
 }
-.innerContainer:after {
+/* .innerContainer:after {
   content: '\00a0';
   display: block;
   margin-top: var( - space );
   height: 0;
   visibility: hidden;
-
-}
+} */
 
 footer {
   background-color: blue;
-  height: 50px;
+  /* height: 50px; */
 }
-
-/* .gameWrapper {
-  width: 100%;
-  height: 100%;
-} */
 .gameContainer {
   composes: border from '../main.css';
   display: flex;
   flex-direction: row;
+  width: 100%;
+  background-color: pink;
+
 }
 
 .leftSide {
-  width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  align-content: flex-start;
   flex: 1;
   padding: 1rem;
   border-right: black solid 2px;
-  background-color: #36A5AB;
+  /* width: 50%; */
+  /* background-color: #36A5AB; */
 }
 
 .rightSide {
   width: 50%;
   padding: 1rem;
-  background-color: #7DD7DF;
+  /* background-color: #7DD7DF; */
 }
 
 /* .footer {
