--- a/src/components/instructions/instructions.css
+++ b/src/components/instructions/instructions.css
@@ -2,8 +2,9 @@
   composes: border container from '../main.css';
   border-color: red;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   padding: 1em;
+  height: 90%;
 }
 
 .instructionsContainer li {
@@ -18,4 +19,7 @@
 .meta {
   background-color: blue;
   color: green;
+}
+.scrollWrapper {
+  overflow: scroll;
 }
